--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <!-- LEFT IMAGE -->
             <div class="about-image animate">
-                <img src="1.png" alt="About Me">
+                <img src="Images/1.jpg" alt="About Me">
             </div>
 
             <!-- RIGHT TEXT -->
