--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
         <div class="services-image-row">
 
             <div class="service-img-card">
-                <img src="app-dev.png" alt="App Development">
+                <img src="Images/1764567634515[1].jpg" alt="App Development">
             </div>
 
             <div class="service-img-card">
-                <img src="website-dev.png" alt="Website Development">
+                <img src="Images/1764211949666[1].jpg" alt="Website Development">
             </div>
 
             <div class="service-img-card">
-                <img src="graphic-dev.png" alt="Graphic Development">
+                <img src="Images/1764212206509[2].jpg" alt="Graphic Development">
             </div>
 
         </div>
@@ -199,7 +199,7 @@
             <div class="testimonial-card">
                 <p>Perfect design, smooth user experience, and quick delivery. Jeetweb helped our boutique get more online customers from day one. Amazing work!</p>
                 <div class="author">
-                    <img src="user1.png">
+                    <img src="Images/11.png">
                     <div>
                         <h4>Neha Sharma</h4>
                         <span>— Owner, StyleEdge Boutique</span>
@@ -210,7 +210,7 @@
             <div class="testimonial-card">
                 <p>The AI and automation solutions by Jeetweb improved our business operations significantly. Saved time, increased efficiency, and boosted customer experience.</p>
                 <div class="author">
-                    <img src="user2.png">
+                    <img src="Images/11.png">
                     <div>
                         <h4>Ankit Tiwari</h4>
                         <span>— CEO, Tiwari Logistics</span>
@@ -221,7 +221,7 @@
             <div class="testimonial-card">
                 <p>They understood exactly what I needed and delivered a premium platform that works flawlessly. Truly supportive and creative team.</p>
                 <div class="author">
-                    <img src="user3.png">
+                    <img src="Images/11.png">
                     <div>
                         <h4>Pooja Singh</h4>
                         <span>— Digital Educator</span>
@@ -233,7 +233,7 @@
             <div class="testimonial-card">
                 <p>Perfect design, smooth user experience, and quick delivery. Jeetweb helped our boutique get more online customers from day one. Amazing work!</p>
                 <div class="author">
-                    <img src="user1.png">
+                    <img src="Images/11.png">
                     <div>
                         <h4>Neha Sharma</h4>
                         <span>— Owner, StyleEdge Boutique</span>
@@ -244,7 +244,7 @@
             <div class="testimonial-card">
                 <p>The AI and automation solutions by Jeetweb improved our business operations significantly. Saved time, increased efficiency, and boosted customer experience.</p>
                 <div class="author">
-                    <img src="user2.png">
+                    <img src="Images/11.png">
                     <div>
                         <h4>Ankit Tiwari</h4>
                         <span>— CEO, Tiwari Logistics</span>
@@ -255,7 +255,7 @@
             <div class="testimonial-card">
                 <p>They understood exactly what I needed and delivered a premium platform that works flawlessly. Truly supportive and creative team.</p>
                 <div class="author">
-                    <img src="user3.png">
+                    <img src="Images/11.png">
                     <div>
                         <h4>Pooja Singh</h4>
                         <span>— Digital Educator</span>
