fixe logo isuue

--- a/aboutus.html
+++ b/aboutus.html
@@ -21,7 +21,7 @@
   <header class="main-header">
     <div class="header-inner">
       <div style="display:flex;align-items:center;gap:12px">
-        <img src="assets/logo.png" alt="logo" class="brand-logo">
+        <img src="Images/codelogo.jpg" alt="logo" class="brand-logo">
         <div class="brand">JEETWEB</div>
       </div>
 
@@ -65,14 +65,14 @@
       </div>
 
       <div class="intro-right animate">
-        <img src="assets/team-jeetweb.png" alt="Jeetweb team">
+        <img src="Images/1764343868818[1].jpg" alt="Jeetweb team">
       </div>
     </div>
   </section>
 
   <!-- API INFOGRAPHIC -->
   <section id="api" class="api-section">
-      <img src="assets/api-infographic.png" alt="API infographic">
+      <img src="Images/IMG-20251201-WA0005[1].jpg" alt="API infographic">
      
   </section>
 
@@ -110,7 +110,7 @@
 
   <!-- DEV IMAGE -->
   <section class="dev-image-wrap">
-    <img src="assets/developer-girl.png" class="animate" alt="Developer">
+    <img src="Images/2.jpg" class="animate" alt="Developer">
   </section>
 
   <!-- MOBILE APP DEV -->
@@ -166,9 +166,7 @@
 
       </div>
 
-      <div class="mobile-right animate">
-        <img src="assets/mobile-app.png" alt="Mobile App Development">
-      </div>
+     
 
     </div>
   </div>
@@ -181,8 +179,8 @@
 
     <!-- COL 1 -->
     <div class="footer-col col-1">
-      <!-- Logo: if you have a logo.png, keep the img; otherwise text will show -->
-      <img src="logo.png" alt="JEETWEB" class="footer-logo" onerror="this.style.display='none'">
+      <!-- Logo: if you have a Images/codelogo.jpg, keep the img; otherwise text will show -->
+      <img src="Images/codelogo.jpg" alt="JEETWEB" class="footer-logo" onerror="this.style.display='none'">
       <div class="footer-brand">JeetWeb – We Build Websites & AI Solutions That Grow Your Business.</div>
 
       <div class="footer-address">
