--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <header class="navbar">
 
     <div class="left-nav">
-        <img src="logo.png" class="nav-logo-icon" alt="Logo">
+        <img src="Images/codelogo.jpg" class="nav-logo-icon" alt="Logo">
         <div class="logo-text">JEETWEB</div>
     </div>
 
@@ -101,7 +101,7 @@
 <footer class="footer">
 
     <div class="footer-col col-1">
-        <img src="logo.png" class="footer-logo" alt="Logo">
+        <img src="Images/codelogo.jpg" class="footer-logo" alt="Logo">
         <p class="footer-brand">JeetWeb – We Build Websites & AI Solutions That Grow Your Business.</p>
 
         <p class="footer-address">
