--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <!-- COL 1 -->
     <div class="footer-col col-1">
       <!-- Logo: if you have a logo.png, keep the img; otherwise text will show -->
-      <img src="logo.png" alt="JEETWEB" class="footer-logo" onerror="this.style.display='none'">
+      <img src="Images/codelogo.jpg" alt="JEETWEB" class="footer-logo" onerror="this.style.display='none'">
       <div class="footer-brand">JeetWeb – We Build Websites & AI Solutions That Grow Your Business.</div>
 
       <div class="footer-address">
