--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
 <header class="header">
     <div class="container header-container">
         <div class="logo-area">
-            <img src="logo.png" class="logo-img">
+            <img src="Images/codelogo.jpg" class="logo-img">
             <span class="logo-text">JEETWEB</span>
         </div>
 
@@ -309,8 +309,8 @@
 
     <!-- COL 1 -->
     <div class="footer-col col-1">
-      <!-- Logo: if you have a logo.png, keep the img; otherwise text will show -->
-      <img src="logo.png" alt="JEETWEB" class="footer-logo" onerror="this.style.display='none'">
+      <!-- Logo: if you have a Images/codelogo.jpg, keep the img; otherwise text will show -->
+      <img src="Images/codelogo.jpg" alt="JEETWEB" class="footer-logo" onerror="this.style.display='none'">
       <div class="footer-brand">JeetWeb – We Build Websites & AI Solutions That Grow Your Business.</div>
 
       <div class="footer-address">
