--- a/portfolio.html
+++ b/portfolio.html
@@ -65,10 +65,14 @@
         <!-- SCROLLING IMAGES -->
         <div class="scroll-wrapper">
             <div class="scroll-images">
-                <img src="pricing1.png" alt="">
-                <img src="pricing2.png" alt="">
-                <img src="pricing3.png" alt="">
-                <img src="pricing4.png" alt="">
+                <img src="Images/19.jpg" alt="">
+                <img src="Images/12.jpg" alt="">
+                <img src="Images/13.jpg" alt="">
+                <img src="Images/14.jpg" alt="">
+                 <img src="Images/15.jpg" alt="">
+                <img src="Images/16.jpg" alt="">
+                <img src="Images/17.jpg" alt="">
+                <img src="Images/18.jpg" alt="">
             </div>
         </div>
     </section>
@@ -183,16 +187,14 @@
         <p>Our best work from different industries</p>
 
         <div class="portfolio-grid">
-            <img src="p1.png">
-            <img src="p2.png">
-            <img src="p3.png">
-            <img src="p4.png">
-            <img src="p5.png">
-            <img src="p6.png">
-            <img src="p7.png">
-            <img src="p8.png">
-            <img src="p9.png">
-            <img src="p10.png">
+            <img src="Images/p1.jpg" alt="Portfolio 1">
+            <img src="Images/p2.jpg" alt="Portfolio 2">
+            <img src="Images/p3.jpg" alt="Portfolio 3">
+            <img src="Images/p4.jpg" alt="Portfolio 4">
+            <img src="Images/p7.jpg" alt="Portfolio 7">
+            <img src="Images/p8.jpg" alt="Portfolio 8">
+            <img src="Images/p9.jpg" alt="Portfolio 9">
+            <img src="Images/p.jpg" alt="Portfolio 10">
         </div>
     </section>
 
@@ -219,8 +221,8 @@
 
     <!-- COL 1 -->
     <div class="footer-col col-1">
-      <!-- Logo: if you have a logo.png, keep the img; otherwise text will show -->
-      <img src="logo.png" alt="JEETWEB" class="footer-logo" onerror="this.style.display='none'">
+      <!-- Logo: if you have a Images/codelogo.jpg, keep the img; otherwise text will show -->
+      <img src="Images/codelogo.jpg" alt="JEETWEB" class="footer-logo" onerror="this.style.display='none'">
       <div class="footer-brand">JeetWeb – We Build Websites & AI Solutions That Grow Your Business.</div>
 
       <div class="footer-address">
